# T310-SAT

./: .gitignore  Cargo.toml  README.md  pyproject.toml
T310-SAT/: CNF-encoding.py  T310_SAT.py
src/: CCITT2.rs  T310.rs  T310SAT.rs  main.rs  mod.rs
