[package]
name = "T310"
version = "0.1.0"
edition = "2024"

[dependencies]
bitvec = "1.0.1"
rand = "0.9.0"
thiserror = "2.0.12"


[lib]
path ="./src/CCITT2.rs"
name = "CCITT2"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]


[dependencies.pyo3]
version = "0.24.0"
# "abi3-py38" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.8
features = ["abi3-py38"]