[package]
name = "T310"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9.0"
## Not Needed until cryptominisat gets release or if its not needed the upstream can be used 
#rustsat = "0.7.2"
#rustsat-cadical = "0.7.2"

rustsat = {git= "https://github.com/NoeB/rustsat", branch = "cryptominisat" }
rustsat-cadical = {git= "https://github.com/NoeB/rustsat", branch = "cryptominisat" }
rustsat-kissat = {git= "https://github.com/NoeB/rustsat", branch = "cryptominisat" }
rustsat-batsat = {git= "https://github.com/NoeB/rustsat", branch = "cryptominisat" }
rustsat-glucose = {git= "https://github.com/NoeB/rustsat", branch = "cryptominisat" }
rustsat-minisat = {git= "https://github.com/NoeB/rustsat", branch = "cryptominisat" }
rustsat-cryptominisat = {git= "https://github.com/NoeB/rustsat", branch = "cryptominisat" }
thiserror = "2.0.12"


[lib]
path ="./src/CCITT2.rs"
name = "CCITT2"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]


[dependencies.pyo3]
version = "0.24.0"
# "abi3-py38" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.8
features = ["abi3-py38"]
